--- a/Parking/Parking/Parking/Parking.csproj
+++ b/Parking/Parking/Parking/Parking.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Helpes\BoolToStringConverter2.cs" />
     <Compile Include="Helpes\BoolToStringConverter.cs" />
     <Compile Include="Helpes\HideCloseButtonOnWindow.cs" />
+    <Compile Include="Helpes\IColorTypeInterface.cs" />
     <Compile Include="Helpes\ImagePathConverter.cs" />
     <Compile Include="Helpes\NullToBooleanConverter.cs" />
     <Compile Include="Helpes\ParkingPlaceRecord.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Model\VehicleType.cs" />
     <Compile Include="ViewModel\Authorezation.cs" />
     <Compile Include="ViewModel\CompanyOps\CompanyInfoContext.cs" />
+    <Compile Include="ViewModel\DictionaryOps\DictOpsContext.cs" />
     <Compile Include="ViewModel\FilterOps\FilterContext.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ParkPlacesOps\CompareStatesForParkingPlace.cs" />
@@ -145,8 +147,8 @@
     <Compile Include="Views\SecondWindow.xaml.cs">
       <DependentUpon>SecondWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\VehicleTypesOps\VehicleTypesOpsWin.xaml.cs">
-      <DependentUpon>VehicleTypesOpsWin.xaml</DependentUpon>
+    <Compile Include="Views\VehicleOps\VehicleOpsWin.xaml.cs">
+      <DependentUpon>VehicleOpsWin.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -199,7 +201,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\VehicleTypesOps\VehicleTypesOpsWin.xaml">
+    <Page Include="Views\VehicleOps\VehicleOpsWin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
