13/06/22 - bug fixing attempt
continuing of bug fixing with vehicle removing

--- a/Parking/Parking/Parking/App.config
+++ b/Parking/Parking/Parking/App.config
@@ -12,10 +12,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-	 <!--SERGEY-PC\SQLEXPRESS--> 
+  <connectionStrings>	 
 	  <!--DESKTOP-QIOAAFL\SQLEXPRESS-->
-	  <add name="ParkingDB" connectionString="data source=SERGEY-PC\SQLEXPRESS;     
+	  <add name="ParkingDB" connectionString="data source=DESKTOP-QIOAAFL\SQLEXPRESS;     
          initial catalog=DBParking;        
          integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connect Timeout = 1"
 		 providerName="System.Data.SqlClient"
