--- a/Parking/Parking/Parking/App.config
+++ b/Parking/Parking/Parking/App.config
@@ -12,10 +12,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>	 
+  <connectionStrings>
+	 <!--SERGEY-PC\SQLEXPRESS--> 
 	  <!--DESKTOP-QIOAAFL\SQLEXPRESS-->
-	  <add name="ParkingDB" connectionString="data source=DESKTOP-QIOAAFL\SQLEXPRESS;     
-         initial catalog=DBParking;        
+	  <add name="ParkingDB" connectionString="data source=SERGEY-PC\SQLEXPRESS;     
+         initial catalog=ParkingDB;        
          integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connect Timeout = 1"
 		 providerName="System.Data.SqlClient"
        />
